Destroyed topics, posts and comments.

--- a/config/application.example.yml
+++ b/config/application.example.yml
@@ -1,7 +1,7 @@
-AWS_ACCESS_KEY_ID: AKIAJ5UNPQHPKES6XLBQ
-AWS_SECRET_ACCESS_KEY: KpJ9G3V6/lmdjgGF7a3O6qFhUaeLkXL0/lkw2PXU
+AWS_ACCESS_KEY_ID: 
+AWS_SECRET_ACCESS_KEY: 
 development:
-    SENDGRID_USERNAME:
+    SENDGRID_USERNAME: 
     SENDGRID_PASSWORD:
     AWS_BUCKET:
 production:
